    enabled for over five years now.
  * Update and fix a minor whitespace issue in
    debian/patches/14_fix_geoip_warning.
  * remove obsolete debian/TODO file.
  * Use dh_lintian to install the override file for tor-geoipdb.  Requires
    changing debhelper build dependency to >= 6 from >= 5, and renaming
    debian/tor-geoipdb.lintian-override to tor-geoipdb.lintian-overrides.

 -- Peter Palfrader <weasel@debian.org>  Sat, 22 Sep 2012 10:15:26 +0200

tor (0.2.4.2-alpha-1) experimental; urgency=low

  * New upstream version.

 -- Peter Palfrader <weasel@debian.org>  Tue, 11 Sep 2012 08:45:17 +0200

tor (0.2.4.1-alpha-1) experimental; urgency=low

  [ Peter Palfrader ]
  * New upstream version (starts 0.2.4.x tree).
  * Forward port debian/patches/03_tor_manpage_in_section_8.

  [ Stefano Zacchiroli ]
  * README.privoxy, README.polipo: explicitly set socks type to socks5.

 -- Peter Palfrader <weasel@debian.org>  Sat, 08 Sep 2012 13:12:54 +0200

tor (0.2.3.21-rc-1) unstable; urgency=low

  * New upstream version, changes including:
    - Tear down the circuit if we get an unexpected SENDME cell. Clients
      could use this trick to make their circuits receive cells faster
      than our flow control would have allowed, or to gum up the network,
      or possibly to do targeted memory denial-of-service attacks on
      entry nodes.
    - Reject any attempt to extend to an internal address. Without
      this fix, a router could be used to probe addresses on an internal
      network to see whether they were accepting connections.
    - Do not crash when comparing an address with port value 0 to an
      address policy.
    For details please see the upstream changelog.

 -- Peter Palfrader <weasel@debian.org>  Fri, 07 Sep 2012 12:25:17 +0200

tor (0.2.3.20-rc-1) unstable; urgency=low

  * New upstream version, including a couple security fixes:
    - Avoid read-from-freed-memory and double-free bugs that could occur