@@ -1,0 +1,1 @@
+/usr/share/doc/tor /usr/share/doc/tor-dbg
