@@ -1,0 +1,1 @@
+/usr/share/man/man8/tor.8 /usr/share/man/man5/torrc.5
